Fix footer spacing

--- a/themes/blog-theme/assets/css/main.css
+++ b/themes/blog-theme/assets/css/main.css
@@ -683,10 +683,9 @@ label.margin-toggle:not(.sidenote-number) {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  max-width: 1200px;
-  margin: 0 auto;
+  margin: 0;
   font-size: 1rem;
-  width: 87.5%;
+  width: 100%;
 }
 
 .social-icons {
